<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".content.HomeActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/welcome"

        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_below="@+id/text"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/den"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emails"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"

        android:layout_marginRight="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/logout"
        android:textColor="@color/den" />

</RelativeLayout>