<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.LoginActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/anh"
        android:contentDescription="@null" />

    <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_marginTop="30dp">

        <EditText
            android:autofillHints="username"
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/emails"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEmail"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/Password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_marginTop="30dp"
        android:id="@+id/loading"
        android:layout_below="@id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPassword"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="100dp"
        android:background="@color/hong"
        android:text="@string/login"
        android:textColor="@color/den" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_Login"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="100dp"
        android:background="@color/hong"
        android:text="@string/register"
        android:textColor="@color/den" />


</RelativeLayout>