<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:padding="8dp"
    android:background="#fff"
    android:id="@+id/containers">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:id="@+id/thumbnail"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:id="@+id/anime_name"-->
        <!--            android:text="Anime Title"-->
        <!--            android:textStyle="bold"-->
        <!--            android:textSize="18sp"/>-->

        <!--        <TextView-->
        <!--            android:layout_marginTop="5dp"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Category"-->
        <!--            android:id="@+id/categorie"/>-->

        <TextView
            android:id="@+id/rating"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rating_background"
            android:text="@string/_0_0"
            android:textColor="#455A64"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studio"
            android:layout_marginTop="5dp"
            android:id="@+id/studio"/>


    </LinearLayout>



</LinearLayout>