<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimalActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/xanh"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appBarLayout_id">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingToolbar_id"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Anime Tile"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_shape"
                    android:id="@+id/aa_thumbnail"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:layout_margin="8dp">


                    <TextView
                        android:id="@+id/aa_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rating_background"
                        android:text="@string/_0_0"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_baseline_star_24"
                        android:layout_marginEnd="5dp"
                        />

                    <TextView
                        android:id="@+id/aa_studio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/studio"
                        android:textColor="#4E342E"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aa_description"/>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>